// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not parse -Infinity 1`] = `
[
  {
    "code": "is_infinite",
    "message": "Expected a finite number, received -Infinity",
    "path": [],
  },
]
`;

exports[`should not parse Infinity 1`] = `
[
  {
    "code": "is_infinite",
    "message": "Expected a finite number, received Infinity",
    "path": [],
  },
]
`;

exports[`should not parse a NaN 1`] = `
[
  {
    "code": "is_nan",
    "message": "Expected a number, received NaN",
    "path": [],
  },
]
`;

exports[`should not parse floats 1`] = `
[
  {
    "code": "invalid_integer",
    "message": "Expected the number to be an integer",
    "path": [],
  },
]
`;
